--- a/getthegold.css
+++ b/getthegold.css
@@ -10,6 +10,7 @@ body {
     flex: 1;
     border: 2px solid rgb(51, 3, 128);
     background-color: rgb(30, 53, 160);
+    width: 450px;
 }  
 
 .flex-child:first-child {
